--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -760,7 +760,7 @@
 @calendar-month-dropdown-border:                  @divider-border-color;
 @calendar-in-menu-content-side-length:            30px;
 @calendar-panel-cell-height:                      100px;
-@calendar-panel-compact-cell-height:              50px;
+@calendar-panel-compact-cell-height:              38px;
 @calendar-panel-border-radius:                    6px;
 @calendar-panel-today-active-side-length:         @line-height-computed;
 @calendar-toolbar-border-color:                   @divider-border-color;
